# Rookie

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile
src/: Board.cpp  Board.hpp  Game.cpp  Game.hpp  Piece.cpp  Piece.hpp  Position.hpp  game.cpp  main.cpp
